libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/let-2.jsonc
//@ run: fail
//@ description: let/2 should error out
["::kernel::special_form::let", "x", { "#literal": true }]
//~^ ERROR Add missing arguments
